# desenvolvimento-de-ia

./: README.md
challenge-01/: index.ipynb
challenges/challenge-01/: pyproject.toml
classes/eda/: eda_churn.ipynb
classes/estatistica_para_devs/: pyproject.toml
lessons/eda/: SWEETVIZ_REPORT.html  eda_churn.ipynb  pyproject.toml  report_churn.html
lessons/estatistica_para_devs/: estatistica_devs.ipynb
lessons/modelo_diabetes/: modelo_diabetes.ipynb  pyproject.toml
