[tool.poetry]
name = "estatistica-devs"
version = "0.1.0"
description = ""
authors = ["Felipe Jung <felipemattoseu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = {version = "^2.1.4", python = "3.11.0"}
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
